--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@braid/vue-formulate": "^2.5.3",
     "@nuxt-hero-icons/outline": "^1.0.1",
     "@nuxt-hero-icons/solid": "^1.0.1",
     "@nuxtjs/auth-next": "5.0.0-1648802546.c9880dc",
@@ -27,8 +28,8 @@
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-final-modal": "^2.4.1",
+    "vue-fullpage-modal": "^0.5.3",
     "vue-server-renderer": "^2.6.14",
-    "vue-stepper": "^1.4.2",
     "vue-template-compiler": "^2.6.14",
     "vue2-datepicker": "^3.10.4",
     "vuex-persistedstate": "^3.2.1",
