--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue": "^2.6.14",
     "vue-final-modal": "^2.4.1",
     "vue-fullpage-modal": "^0.5.3",
+    "vue-iframes": "^0.0.19",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vue2-datepicker": "^3.10.4",
