--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nuxtjs/toast": "^3.3.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "v-tooltip": "^2.1.3",
     "vue": "^2.6.14",
     "vue-final-modal": "^2.4.1",
     "vue-fullpage-modal": "^0.5.3",
