--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "@nuxtjs/toast": "^3.3.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
-    "v-tooltip": "^2.1.3",
     "vue": "^2.6.14",
     "vue-final-modal": "^2.4.1",
     "vue-fullpage-modal": "^0.5.3",
     "vue-iframes": "^0.0.19",
+    "vue-js-popover": "^1.2.1",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vue2-datepicker": "^3.10.4",
