--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@nuxtjs/i18n": "^7.2.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/toast": "^3.3.1",
+    "cookie": "^0.5.0",
     "core-js": "^3.19.3",
+    "js-cookie": "^3.0.1",
     "node-sass": "^7.0.1",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
