Development-7012-SNBL UI

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cookie": "^0.5.0",
     "core-js": "^3.19.3",
     "js-cookie": "^3.0.1",
+    "moment": "^2.29.4",
     "node-sass": "^7.0.1",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
@@ -38,6 +39,7 @@
     "vue-iframes": "^0.0.19",
     "vue-js-popover": "^1.2.1",
     "vue-server-renderer": "^2.6.14",
+    "vue-simple-range-slider": "^1.0.0",
     "vue-splash": "^1.2.1",
     "vue-template-compiler": "^2.6.14",
     "vue2-datepicker": "^3.10.4",
