--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "moment": "^2.29.4",
     "node-sass": "^7.0.1",
     "nuxt": "^2.15.8",
+    "swiper": "^8.4.4",
     "vue": "^2.6.14",
+    "vue-awesome-swiper": "^5.0.1",
     "vue-final-modal": "^2.4.1",
     "vue-fullpage-modal": "^0.5.3",
     "vue-iframes": "^0.0.19",
@@ -41,6 +43,7 @@
     "vue-server-renderer": "^2.6.14",
     "vue-simple-range-slider": "^1.0.0",
     "vue-splash": "^1.2.1",
+    "vue-ssr-carousel": "^1.7.1",
     "vue-template-compiler": "^2.6.14",
     "vue2-datepicker": "^3.10.4",
     "vuex-persistedstate": "^3.2.1",
