--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "vue-template-compiler": "^2.6.14",
     "vue2-datepicker": "^3.10.4",
     "vuex-persistedstate": "^3.2.1",
+    "vue-cool-lightbox": "2.7.0",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
