--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,5 +16,12 @@ deploy:
     - chmod 700 ~/.ssh
     - ssh-keyscan $SSH_HOST >> ~/.ssh/known_hosts
     - chmod 644 ~/.ssh/known_hosts
+    - echo $PATH
+    - export PATH="$PATH:/usr/local/bin"
+    - source ~/.bashrc
   script:
-    - ssh $SSH_USER@$SSH_HOST "cd ~/uat_application/finfi_admin && git pull origin development && npm install && npm run build && pm2 restart uat-app"
+    - ssh $SSH_USER@$SSH_HOST "cd ~/uat_application/finfi_app && git pull origin development"
+    - npm install pm2 -g
+    - npm install
+    - npm run build
+    - pm2 start --name="uat-app" npm -- start
