--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,5 +22,10 @@ deploy:
   script:
     - ssh $SSH_USER@$SSH_HOST "cd ~/uat_application/finfi_app && git pull origin development"
     - npm install pm2 -g
+    - npm install # Install project dependencies
+    - npm install --save-dev nuxt # Install Nuxt.js as a development dependency
     - npm run build
     - pm2 start --name="uat-app" npm -- start
+  artifacts:
+    paths:
+      - dist/ # Save the built application  
