--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "moment": "^2.29.4",
     "node-sass": "^7.0.1",
     "nuxt": "^2.15.8",
+    "v-calendar": "^2.4.1",
     "vue": "^2.6.14",
     "vue-cool-lightbox": "2.7.0",
     "vue-final-modal": "^2.4.1",
