--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "moment": "^2.29.4",
     "node-sass": "^7.0.1",
     "nuxt": "^2.15.8",
+    "v-calendar": "^2.4.1",
     "vue": "^2.6.14",
     "vue-cool-lightbox": "2.7.0",
     "vue-final-modal": "^2.4.1",
@@ -45,6 +46,7 @@
     "vue-splash": "^1.2.1",
     "vue-ssr-carousel": "^1.7.1",
     "vue-template-compiler": "^2.6.14",
+    "vue-web-cam": "^1.9.0",
     "vue2-datepicker": "^3.10.4",
     "vuex-persistedstate": "^3.2.1",
     "webpack": "^4.46.0"
